--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:ryutok@uci.edu" class="contact-link">ryutok@uci.edu</a>
+              <a href="mailto:ryutok@ignoreme-uci.edu" class="contact-link">ryutok@<span style="display:none;">ignoreme-</span>uci.edu</a>
             </div>
 
           </li>
@@ -193,10 +193,6 @@
 
       </nav>
 
-
-
-
-
       <!--
         - #ABOUT
       -->
@@ -209,20 +205,28 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm a PhD candidate in Computer Science at the
+            University of California, Irvine
+            in the
+            <a href="https://ics.uci.edu/~theory/">
+              Center for Algorithms and Theory of Computation
+            </a>.
+            My academic advisor is 
+            <a href="https://ics.uci.edu/~goodrich/">Dr. Michael Goodrich</a>.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            My current interests are in the field of designing algorithms
+            and data structures for massively parallel computing systems.
+            I am currently working on several projects related to GPU
+            programming, from both a theoretical and experimental perspective.
+
+            I also have an interest in data sketching algorithms, which are
+            the summarization of large data sets in a small amount of space
+            (sadly this has nothing to do with drawing, which is not a strong
+            suite of mine).
           </p>
         </section>
-
 
         <!--
           - service
@@ -230,7 +234,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">What I'm Doing</h3>
 
           <ul class="service-list">
 
