--- a/index.html
+++ b/index.html
@@ -207,12 +207,8 @@
           <p>
             I'm a PhD candidate in Computer Science at the
             University of California, Irvine
-            in the
-            <a href="https://ics.uci.edu/~theory/">
-              Center for Algorithms and Theory of Computation
-            </a>.
-            My academic advisor is 
-            <a href="https://ics.uci.edu/~goodrich/">Dr. Michael Goodrich</a>.
+            in the <a href="https://ics.uci.edu/~theory/">Center for Algorithms and Theory of Computation</a>.
+            My academic advisor is <a href="https://ics.uci.edu/~goodrich/">Dr. Michael Goodrich</a>.
           </p>
 
           <p>
