give up on links for now

--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
         </header>
 
         <section class="about-text">
-          <p>
+          <p stlye="display: inline">
             I'm a PhD candidate in Computer Science at the
             University of California, Irvine
-            in the <a href="https://ics.uci.edu/~theory/">Center for Algorithms and Theory of Computation</a>.
-            My academic advisor is <a href="https://ics.uci.edu/~goodrich/">Dr. Michael Goodrich</a>.
+            in the Center for Algorithms and Theory of Computation
+            My academic advisor is Dr. Michael Goodrich.
           </p>
 
           <p>
