--- a/index.html
+++ b/index.html
@@ -207,8 +207,14 @@
           <p stlye="display: inline">
             I'm a PhD candidate in Computer Science at the
             University of California, Irvine
-            in the Center for Algorithms and Theory of Computation
-            My academic advisor is Dr. Michael Goodrich.
+            in the 
+            <a href="https://ics.uci.edu/~theory/" style="display: inline">
+              Center for Algorithms and Theory of Computation
+            </a>
+            My academic advisor is
+            <a href="https://ics.uci.edu/~goodrich/" style="display: inline">
+              Dr. Michael Goodrich.
+            </a>
           </p>
 
           <p>
