trying some stuff

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Ryuto Kitagawa" width="80">
+          <img src="./assets/images/main-photo.png" alt="Ryuto Kitagawa" width="80">
         </figure>
 
         <div class="info-content">
@@ -154,16 +154,46 @@
           </p>
 
           <p>
-            My current interests are in the field of designing algorithms
+            My current research interests are in the field of designing algorithms
             and data structures for massively parallel computing systems.
             I am currently working on several projects related to GPU
             programming, from both a theoretical and experimental perspective.
-
             I also have an interest in data sketching algorithms, which are
             the summarization of large data sets in a small amount of space
             (sadly this has nothing to do with drawing, which is not a strong
             suite of mine).
           </p>
+
+          <p>
+            Outside of research, I consider programming to be one of my main
+            hobbies.
+            I am a big fan of Neovim as a coding environment and enjoy tweaking
+            my setup during my free time.
+            I also spend a non-significant amount of time trying to out
+            different operating systems and window managers.
+            My current setup is based heavily around NixOS, which uses a
+            unique declarative approach to configuration management.
+            The two main features that I enjoy is the rollback feature, which
+            helps me recover from my own mistakes, and the ability to port
+            my configuration to other machines with minimal effort.
+            For more information about NixOS as a whole, I recommend checking
+            out
+            <a href="https://www.youtube.com/watch?v=CwfKlX3rA6E" style="display: inline">
+              this youtube video
+            </a>
+            by No Boilerplate.
+          </p>
+
+          <p>
+            I do have a life outside of computers, I swear.
+            I enjoy playing the guitar and ukulele, and have been playing
+            at a novice level for the past 8 years.
+            I have recently begun going on walks around my neighborhood and
+            taking photos of random things I see.
+            I also enjoy cooking and have been recently trying various
+            recipes of Mexican cuisine.
+          </p>
+
         </section>
 
         <!--
