--- a/resume.html
+++ b/resume.html
@@ -7,104 +7,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ryuto Kitagawa</title>
 
-  <!--
-    - favicon
-  -->
+  <script src="jquery-3.7.1.min.js"></script> 
+  <script type="text/javascript"> 
+  $(function(){
+    $("#SideBar").load("sidebar.html"); 
+  });
+  </script> 
+
+
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
-
-  <!--
-    - custom css link
-  -->
   <link rel="stylesheet" href="./assets/css/style.css">
-
-  <!--
-    - google font link
-  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-  <!--
-    - #MAIN
-  -->
-
   <main>
+  <aside class="sidebar" data-sidebar>
 
-    <!--
-      - #SIDEBAR
-    -->
+    <div class="sidebar-info">
+      <div id="SideBar"></div>
+    </div>
 
-    <aside class="sidebar" data-sidebar>
+    <div class="sidebar-info_more">
 
-      <div class="sidebar-info">
+      <div class="separator"></div>
 
-        <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Ryuto Kitagawa" width="80">
-        </figure>
+      <ul class="contacts-list">
 
-        <div class="info-content">
-          <h1 class="name" title="Ryuto Kitagawa">Ryuto Kitagawa</h1>
+        <li class="contact-item">
 
-          <p class="title">PhD Candidate</p>
-        </div>
+          <div class="icon-box">
+            <ion-icon name="mail-outline"></ion-icon>
+          </div>
 
-        <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <div class="contact-info">
+            <p class="contact-title">Email</p>
 
-          <ion-icon name="chevron-down"></ion-icon>
-        </button>
+            <a href="mailto:ryutok@ignoreme-uci.edu" class="contact-link">ryutok@<span style="display:none;">ignoreme-</span>uci.edu</a>
+          </div>
 
-      </div>
+        </li>
 
-      <div class="sidebar-info_more">
+        <li class="contact-item">
 
-        <div class="separator"></div>
+          <div class="icon-box">
+            <ion-icon name="location-outline"></ion-icon>
+          </div>
 
-        <ul class="contacts-list">
+          <div class="contact-info">
+            <p class="contact-title">Location</p>
 
-          <li class="contact-item">
+            <address>Irvine, California, USA</address>
+          </div>
 
-            <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
-            </div>
+        </li>
 
-            <div class="contact-info">
-              <p class="contact-title">Email</p>
+      </ul>
 
-              <a href="mailto:ryutok@ignoreme-uci.edu" class="contact-link">ryutok@<span style="display:none;">ignoreme-</span>uci.edu</a>
-            </div>
+    </div>
 
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Location</p>
-
-              <address>Irvine, California, USA</address>
-            </div>
-
-          </li>
-
-        </ul>
-
-      </div>
-
-    </aside>
-
-    <!--
-      - #main-content
-    -->
-
+  </aside>
     <div class="main-content">
-
       <!--
         - #NAVBAR
       -->
@@ -149,41 +114,24 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">University of California, Irvine (UCI)</h4>
 
-              <span>2007 — 2008</span>
+              <span>2021 — Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                PhD in Computer Science
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">University of Hawaii at Manoa (UH)</h4>
 
-              <span>2006 — 2007</span>
-
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
+              <span>2018 — 2021</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                B.S. in Computer Science
               </p>
 
             </li>
@@ -206,43 +154,33 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">UCI: Teaching Assistant</h4>
 
-              <span>2015 — Present</span>
-
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
-              </p>
+              <span>2021 — Present</span>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">UCI: Graduate Researcher</h4>
 
-              <span>2013 — 2015</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <span>2021 — Present</span>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">UH: Undergradeate Research Assistant</h4>
 
-              <span>2010 — 2013</span>
+              <span>2020 — 2021</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Raytheon: Software Engineer Intern</h4>
+
+              <span>May 2019 — August 2019</span>
 
             </li>
 
@@ -252,14 +190,14 @@
 
         <section class="skill">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">Skills</h3>
 
           <ul class="skills-list content-card">
 
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5">Python</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -272,7 +210,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">C++</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -285,12 +223,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">Cuda</h5>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
@@ -298,7 +236,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Unix</h5>
                 <data value="50">50%</data>
               </div>
 
