--- a/resume.html
+++ b/resume.html
@@ -1,262 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ryuto Kitagawa</title>
-
-  <script src="jquery-3.7.1.min.js"></script> 
-  <script type="text/javascript"> 
-  $(function(){
-    $("#SideBar").load("sidebar.html"); 
-  });
-  </script> 
-
-
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-</head>
-
-<body>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Ryuto Kitagawa
+  </title>
+  <link href="./assets/images/logo.ico" rel="shortcut icon" type="image/x-icon"/>
+  <link href="./assets/css/style.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&amp;display=swap" rel="stylesheet"/>
+ </head>
+ <body>
   <main>
-  <aside class="sidebar" data-sidebar>
-
+   <aside class="sidebar" data-sidebar="">
     <div class="sidebar-info">
-      <div id="SideBar"></div>
+     <figure class="avatar-box">
+      <img alt="Ryuto Kitagawa" src="./assets/images/main-photo.png" width="80"/>
+     </figure>
+     <div class="info-content">
+      <h1 class="name" title="Ryuto Kitagawa">
+       Ryuto Kitagawa
+      </h1>
+      <p class="title">
+       PhD Candidate
+      </p>
+     </div>
+     <button class="info_more-btn" data-sidebar-btn="">
+      <span>
+       Show Contacts
+      </span>
+      <ion-icon name="chevron-down">
+      </ion-icon>
+     </button>
     </div>
-
     <div class="sidebar-info_more">
-
-      <div class="separator"></div>
-
-      <ul class="contacts-list">
-
-        <li class="contact-item">
-
-          <div class="icon-box">
-            <ion-icon name="mail-outline"></ion-icon>
-          </div>
-
-          <div class="contact-info">
-            <p class="contact-title">Email</p>
-
-            <a href="mailto:ryutok@ignoreme-uci.edu" class="contact-link">ryutok@<span style="display:none;">ignoreme-</span>uci.edu</a>
-          </div>
-
-        </li>
-
-        <li class="contact-item">
-
-          <div class="icon-box">
-            <ion-icon name="location-outline"></ion-icon>
-          </div>
-
-          <div class="contact-info">
-            <p class="contact-title">Location</p>
-
-            <address>Irvine, California, USA</address>
-          </div>
-
-        </li>
-
-      </ul>
-
+     <div class="separator">
+     </div>
+     <ul class="contacts-list">
+      <li class="contact-item">
+       <div class="icon-box">
+        <ion-icon name="mail-outline">
+        </ion-icon>
+       </div>
+       <div class="contact-info">
+        <p class="contact-title">
+         Email
+        </p>
+        <a class="contact-link" href="mailto:ryutok@ignoreme-uci.edu">
+         ryutok@
+         <span style="display:none;">
+          ignoreme-
+         </span>
+         uci.edu
+        </a>
+       </div>
+      </li>
+      <li class="contact-item">
+       <div class="icon-box">
+        <ion-icon name="location-outline">
+        </ion-icon>
+       </div>
+       <div class="contact-info">
+        <p class="contact-title">
+         Location
+        </p>
+        <address>
+         Irvine, California, USA
+        </address>
+       </div>
+      </li>
+     </ul>
     </div>
-
-  </aside>
-    <div class="main-content">
-      <!--
-        - #NAVBAR
-      -->
-
-      <nav class="navbar">
-
-        <ul class="navbar-list">
-
-          <li class="navbar-item">
-            <button class="navbar-link" onclick="window.location.href='index.html'">About</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link active" onclick="window.location.href='resume.html'">Resume</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" onclick="window.location.href='blog.html'">Blog</button>
-          </li>
-
-        </ul>
-
-      </nav>
-
-      <article class="resume active" data-page="resume">
-
-        <header>
-          <h2 class="h2 article-title">Resume</h2>
-        </header>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Education</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">University of California, Irvine (UCI)</h4>
-
-              <span>2021 — Present</span>
-
-              <p class="timeline-text">
-                PhD in Computer Science
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">University of Hawaii at Manoa (UH)</h4>
-
-              <span>2018 — 2021</span>
-
-              <p class="timeline-text">
-                B.S. in Computer Science
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">UCI: Teaching Assistant</h4>
-
-              <span>2021 — Present</span>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">UCI: Graduate Researcher</h4>
-
-              <span>2021 — Present</span>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">UH: Undergradeate Research Assistant</h4>
-
-              <span>2020 — 2021</span>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Raytheon: Software Engineer Intern</h4>
-
-              <span>May 2019 — August 2019</span>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="skill">
-
-          <h3 class="h3 skills-title">Skills</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Python</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">C++</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Cuda</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Unix</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
-
-      </article>
-
+   </aside>
+   <div class="main-content">
+    <nav class="navbar">
+     <ul class="navbar-list">
+      <li class="navbar-item">
+       <button class="navbar-link" onclick="window.location.href='index.html'">
+        About
+       </button>
+      </li>
+      <li class="navbar-item">
+       <button class="navbar-link" onclick="window.location.href='resume.html'">
+        Resume
+       </button>
+      </li>
+      <li class="navbar-item">
+       <button class="navbar-link" onclick="window.location.href='blog.html'">
+        Blog
+       </button>
+      </li>
+     </ul>
+    </nav>
+    <article class="resume active" data-page="resume">
+     <header>
+      <h2 class="h2 article-title">
+       Resume
+      </h2>
+     </header>
+     <section class="timeline">
+      <div class="title-wrapper">
+       <div class="icon-box">
+        <ion-icon name="book-outline">
+        </ion-icon>
+       </div>
+       <h3 class="h3">
+        Education
+       </h3>
       </div>
-    </main>
-
-    <script src="./assets/js/script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  </body>
+      <ol class="timeline-list">
+       <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">
+         University of California, Irvine (UCI)
+        </h4>
+        <span>
+         2021 — Present
+        </span>
+        <p class="timeline-text">
+         PhD in Computer Science
+        </p>
+       </li>
+       <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">
+         University of Hawaii at Manoa (UH)
+        </h4>
+        <span>
+         2018 — 2021
+        </span>
+        <p class="timeline-text">
+         B.S. in Computer Science
+        </p>
+       </li>
+      </ol>
+     </section>
+     <section class="timeline">
+      <div class="title-wrapper">
+       <div class="icon-box">
+        <ion-icon name="book-outline">
+        </ion-icon>
+       </div>
+       <h3 class="h3">
+        Experience
+       </h3>
+      </div>
+      <ol class="timeline-list">
+       <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">
+         UCI: Teaching Assistant
+        </h4>
+        <span>
+         2021 — Present
+        </span>
+       </li>
+       <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">
+         UCI: Graduate Researcher
+        </h4>
+        <span>
+         2021 — Present
+        </span>
+       </li>
+       <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">
+         UH: Undergradeate Research Assistant
+        </h4>
+        <span>
+         2020 — 2021
+        </span>
+       </li>
+       <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">
+         Raytheon: Software Engineer Intern
+        </h4>
+        <span>
+         May 2019 — August 2019
+        </span>
+       </li>
+      </ol>
+     </section>
+     <section class="skill">
+      <h3 class="h3 skills-title">
+       Skills
+      </h3>
+      <ul class="skills-list content-card">
+       <li class="skills-item">
+        <div class="title-wrapper">
+         <h5 class="h5">
+          Python
+         </h5>
+         <data value="80">
+          80%
+         </data>
+        </div>
+        <div class="skill-progress-bg">
+         <div class="skill-progress-fill" style="width: 80%;">
+         </div>
+        </div>
+       </li>
+       <li class="skills-item">
+        <div class="title-wrapper">
+         <h5 class="h5">
+          C++
+         </h5>
+         <data value="70">
+          70%
+         </data>
+        </div>
+        <div class="skill-progress-bg">
+         <div class="skill-progress-fill" style="width: 70%;">
+         </div>
+        </div>
+       </li>
+       <li class="skills-item">
+        <div class="title-wrapper">
+         <h5 class="h5">
+          Cuda
+         </h5>
+         <data value="70">
+          70%
+         </data>
+        </div>
+        <div class="skill-progress-bg">
+         <div class="skill-progress-fill" style="width: 70%;">
+         </div>
+        </div>
+       </li>
+       <li class="skills-item">
+        <div class="title-wrapper">
+         <h5 class="h5">
+          Unix
+         </h5>
+         <data value="50">
+          50%
+         </data>
+        </div>
+        <div class="skill-progress-bg">
+         <div class="skill-progress-fill" style="width: 50%;">
+         </div>
+        </div>
+       </li>
+      </ul>
+     </section>
+    </article>
+   </div>
+  </main>
+  <script src="./assets/js/script.js">
+  </script>
+  <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module">
+  </script>
+  <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">
+  </script>
+ </body>
 </html>
